welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:13: error: ';' expected but 'else' found.
    } else 
      ^caughtSpeeding:28: error: ';' expected but 'else' found.
    } else 
      ^